crates/isograph_lang_parser/fixtures/commented-out.output
Err(
    WithLocation {
        location: Embedded(
            EmbeddedLocation {
                text_source: TextSource {
                    current_working_directory: CurrentWorkingDirectory,
                    relative_path_to_source_file: RelativePathToSourceFile(
                        "crates/isograph_lang_parser/fixtures/commented-out.input.js",
                    ),
                    span: Some(
                        Span {
                            start: 31,
                            end: 136,
                        },
                    ),
                },
                span: Span {
                    start: 1,
                    end: 2,
                },
            },
        ),
        item: ParseError {
            error: ParseTokenKindError {
                expected_kind: Identifier,
                found_kind: Error,
            },
        },
    },
)

Expected non-variable identifier (e.g. 'x' or 'Foo'), found error.
crates/isograph_lang_parser/fixtures/commented-out.input.js

//   field User.bestFriend on User {
^                                   
//     friends {
//       id
---
