crates/isograph_lang_parser/fixtures/commented-out.input.js
// export const myField = iso(`
//   field User.bestFriend on User {
//     friends {
//       id
//       closeness
//     }
//   }
// `)();
